[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Assets Mario/lifes.png" type="Texture" id=1]
[ext_resource path="res://assets/Pixelify_Sans/PixelifySans-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Assets Mario/coins.png" type="Texture" id=3]
[ext_resource path="res://scenes/HUD.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="CoinIndicator" type="Sprite" parent="."]
position = Vector2( 898, 32 )
scale = Vector2( 4.625, 4.625 )
texture = ExtResource( 3 )

[node name="CoinsLabel" type="Label" parent="."]
margin_left = 944.0
margin_top = 4.0
margin_right = 1084.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "0
"

[node name="Lifes" type="Sprite" parent="."]
position = Vector2( 90, 25 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 1 )

[node name="LifesLabel" type="Label" parent="."]
margin_left = 109.0
margin_top = 36.0
margin_right = 189.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 2 )
text = "x 3"

[node name="LevelLabel" type="Label" parent="."]
margin_left = 453.0
margin_top = 13.0
margin_right = 616.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 3 )
text = "LEVEL 1"
